replaced the icon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cloud.appwrite.io/v1/storage/buckets/676590df00321eb55c08/files/6781570b002a30ab6f17/view?project=67658dc4000374a2bd2a&project=67658dc4000374a2bd2a&mode=admin" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>DSA-TRACKER</title>
   </head>
   <body>
     <div id="root"></div>
