added the chatbot

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="https://cloud.appwrite.io/v1/storage/buckets/676590df00321eb55c08/files/6781570b002a30ab6f17/view?project=67658dc4000374a2bd2a&project=67658dc4000374a2bd2a&mode=admin" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSA-TRACKER</title>
+    
+    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
+  <script src="https://files.bpcontent.cloud/2025/08/31/20/20250831201612-JW4NPYMN.js" defer></script>
+    
   </head>
   <body>
     <div id="root"></div>
